added to git ignore should only push madeup swc data .csv and .qmd file

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ po/*~
 
 # Participants tracking spreadsheet
 participants.xlsx
+
+# maps shapefile data 
+folder_to_ignore/"week-09-maps/data/LAD_BUC_2022/"
+
