--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,5 @@ po/*~
 participants.xlsx
 
 # maps shapefile data 
-folder_to_ignore/"week-09-maps/data/LAD_BUC_2022/"
+week-09-maps/data/LAD_BUC_2022/
 
